--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <table border="2" width="400"> 
             
             <tr >
-            <td width="150" >  user name</td>
+            <td width="150" >  User Name</td>
             <td><input type="text" name="UserName" size="30" placeholder="UserName" > </td>
             </tr>
             
